Make Api and documentation of Sub-categories
