# app/Http/Controllers/Api/CatalogController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers\Api;
 use App\Http\Controllers\Controller;
 use App\Http\Resources\CatalogResource;
 use App\Http\Resources\CategoryResource;
+use App\Http\Resources\SubCategoryResource;
 use App\Services\CatalogService;
 use Illuminate\Http\Request;
 
@@ -57,5 +58,26 @@ class CatalogController extends Controller
     {
         $categories = $this->catalogService->categories();
         return CategoryResource::collection($categories);
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/api/sub-categories",
+     *     summary="Retrieve all sub-categories",
+     *     tags={"Sub-Categories"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="List of all sub-categories"
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal server error"
+     *     )
+     * )
+     */
+    public function subCategories()
+    {
+        $subCategories = $this->catalogService->subCategories();
+        return SubCategoryResource::collection($subCategories);
     }
 }
